--- a/android-client/res/menu/navigation.xml
+++ b/android-client/res/menu/navigation.xml
@@ -1,9 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <menu xmlns:android="http://schemas.android.com/apk/res/android">
     <group android:checkableBehavior="single">
-
-    <item android:id="@+id/options_fragment"
-        android:title="Options" />
-
+    <item android:id="@+id/home_fragment" android:title="Home" />
+    <item android:id="@+id/options_fragment" android:title="Options" />
     </group>
 </menu>
