More android auth

--- a/android-client/res/layout/options_fragment.xml
+++ b/android-client/res/layout/options_fragment.xml
@@ -61,7 +61,11 @@
                 android:textColor="@color/primary_text"/>
         </RadioGroup>
 
-
+        <Button
+            android:id="@+id/logout_button"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Logout" />
 
     </LinearLayout>
 </ScrollView>
