--- a/android-client/res/xml/network_security_config.xml
+++ b/android-client/res/xml/network_security_config.xml
@@ -1,8 +1,8 @@
 <?xml version="1.0" encoding="utf-8"?>
 <network-security-config>
-    <domain-config cleartextTrafficPermitted="true">
-        <domain includeSubdomains="true">9914.us</domain>
-        <domain includeSubdomains="true">192.168.1.20</domain>
-        <domain includeSubdomains="true">192.168.1.4</domain>
-    </domain-config>
+    <base-config cleartextTrafficPermitted="true">
+        <trust-anchors>
+            <certificates src="system" />
+        </trust-anchors>
+    </base-config>
 </network-security-config>
