--- a/android-client/res/layout/movie_details_fragment.xml
+++ b/android-client/res/layout/movie_details_fragment.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+android:orientation="vertical">
+
+<SurfaceView
+    android:id="@+id/video_layout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent">
-    <org.videolan.libvlc.util.VLCVideoLayout
-        android:id="@+id/video_layout"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:fitsSystemWindows="false"/>
-</androidx.constraintlayout.widget.ConstraintLayout>
+    android:layout_height="match_parent"
+    android:fitsSystemWindows="false"/>
+
+</LinearLayout>
