--- a/android-client/res/layout/app_mobile.xml
+++ b/android-client/res/layout/app_mobile.xml
@@ -38,7 +38,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="match_parent"
                 app:defaultNavHost="true"
-                app:navGraph="@navigation/main_nav" />
+                app:navGraph="@navigation/mobile_navmap" />
 
             <ProgressBar
                 android:id="@+id/loading_indicator"
