[WiP] Focus now working with TV dpad, still a lot of work to do on the grid

--- a/android-client/res/layout/mobile_poster_list_item.xml
+++ b/android-client/res/layout/mobile_poster_list_item.xml
@@ -7,13 +7,13 @@
     android:focusableInTouchMode="true">
     <ImageView
     android:id="@+id/item_image"
-    android:layout_width="175dp"
-    android:layout_height="175dp"
-    android:maxHeight="175dp"
-    android:minHeight="175dp"
-    android:minWidth="175dp"
-    android:maxWidth="175dp"
-    android:layout_gravity="center"
+    android:layout_width="204dp"
+    android:layout_height="300dp"
+    android:maxHeight="300dp"
+    android:minHeight="300dp"
+    android:minWidth="204dp"
+    android:maxWidth="204dp"
+
     android:adjustViewBounds="false"
     android:background="@drawable/image_background"
     android:cropToPadding="false"
@@ -22,15 +22,16 @@
     android:layout_marginLeft="2dp"
     android:layout_marginRight="2dp"
     android:layout_marginBottom="25dp"
-    android:scaleType="fitCenter"
+    android:layout_columnWeight="680"
+    android:layout_rowWeight="1000"
+    android:scaleType="centerCrop"
     android:contentDescription="Placeholder"
     android:visibility="gone" />
     <TextView
     android:id="@+id/item_text"
-    android:layout_width="150dp"
-    android:layout_height="150dp"
+    android:layout_width="204dp"
+    android:layout_height="300dp"
     android:layout_weight="10"
-    android:gravity="center"
     android:layout_margin="2dp"
     android:background="@color/primary_dark"
     android:textColor="@color/white"
