--- a/android-client/res/layout/mobile_poster_list_fragment.xml
+++ b/android-client/res/layout/mobile_poster_list_fragment.xml
@@ -1,12 +1,14 @@
 <?xml version="1.0" encoding="utf-8"?>
-<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:orientation="vertical">
+<ScrollView
+    xmlns:android="http://schemas.android.com/apk/res/android"
+    android:id="@+id/scroll"
+    android:layout_width="wrap_content"
+    android:layout_height="wrap_content">
 
     <androidx.recyclerview.widget.RecyclerView
         android:focusable="true"
         android:focusableInTouchMode="true"
+        android:descendantFocusability="afterDescendants"
         android:id="@+id/poster_item_list"
         android:layout_width="fill_parent"
         android:layout_height="fill_parent"
@@ -17,4 +19,4 @@
         <requestFocus />
     </androidx.recyclerview.widget.RecyclerView>
 
-</LinearLayout>
+</ScrollView>
