--- a/expo/android/app/src/main/res/values/colors.xml
+++ b/expo/android/app/src/main/res/values/colors.xml
@@ -1,6 +1,6 @@
 <resources>
   <color name="splashscreen_background">#ff9a3f</color>
-  <color name="iconBackground">#FFFFFF</color>
+  <color name="iconBackground">#ffffff</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#ff9a3f</color>
 </resources>
