--- a/expo/android/app/src/main/res/values/colors.xml
+++ b/expo/android/app/src/main/res/values/colors.xml
@@ -3,4 +3,5 @@
   <color name="iconBackground">#ffffff</color>
   <color name="colorPrimary">#023c69</color>
   <color name="colorPrimaryDark">#ff9a3f</color>
+  <color name="navigationBarColor">#00000080</color>
 </resources>
