--- a/expo/android/app/src/main/res/values/styles.xml
+++ b/expo/android/app/src/main/res/values/styles.xml
@@ -3,6 +3,7 @@
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     <item name="colorPrimary">@color/colorPrimary</item>
     <item name="android:statusBarColor">#ff9a3f</item>
+    <item name="android:windowBackground">@color/activityBackground</item>
   </style>
   <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
     <item name="windowSplashScreenBackground">@color/splashscreen_background</item>
