--- a/expo/android/app/src/main/res/values/styles.xml
+++ b/expo/android/app/src/main/res/values/styles.xml
@@ -3,7 +3,7 @@
     <item name="android:enforceNavigationBarContrast" tools:targetApi="29">true</item>
     <item name="android:editTextBackground">@drawable/rn_edit_text_material</item>
     <item name="colorPrimary">@color/colorPrimary</item>
-    <item name="android:statusBarColor">#ff9a3f</item>
+    <item name="android:statusBarColor">#FD6F01</item>
     <item name="android:windowBackground">@color/activityBackground</item>
   </style>
   <style name="Theme.App.SplashScreen" parent="Theme.SplashScreen">
